breaking ground on top section

--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -3,7 +3,9 @@
 @import '../../../bower_components/bootstrap/less/grid';
 @import '../../../bower_components/bootstrap/less/responsive-utilities';
 @import '../../../bower_components/bootstrap/less/normalize';
+@import './variables';
 @import './site';
+@import './home';
 
 * {
   box-sizing: border-box;
