--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -1,3 +1,12 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
 .site-header {
   position: fixed;
   background-color: #fff;
