--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -9,4 +9,5 @@
   <link rel="stylesheet" href="{{ "/dist/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,600|Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
 </head>
