--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -3,8 +3,20 @@ body {
 }
 
 h1 {
-  font-weight: 300;
   font-size: 42px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 300;
+}
+
+p {
+  font-size: 20px;
+  line-height: 32px;
 }
 
 .site-header {
