--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -3,6 +3,20 @@
 @import '../../../bower_components/bootstrap/less/grid';
 @import '../../../bower_components/bootstrap/less/responsive-utilities';
 @import '../../../bower_components/bootstrap/less/normalize';
+@import '../../../bower_components/font-awesome/less/variables.less';
+// override fonts path
+@fa-font-path: './fonts';
+@import '../../../bower_components/font-awesome/less/mixins.less';
+@import '../../../bower_components/font-awesome/less/path.less';
+@import '../../../bower_components/font-awesome/less/core.less';
+@import '../../../bower_components/font-awesome/less/larger.less';
+@import '../../../bower_components/font-awesome/less/fixed-width.less';
+@import '../../../bower_components/font-awesome/less/list.less';
+@import '../../../bower_components/font-awesome/less/bordered-pulled.less';
+@import '../../../bower_components/font-awesome/less/animated.less';
+@import '../../../bower_components/font-awesome/less/rotated-flipped.less';
+@import '../../../bower_components/font-awesome/less/stacked.less';
+@import '../../../bower_components/font-awesome/less/icons.less';
 @import './variables';
 @import './site';
 @import './home';
