--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -1,9 +1,23 @@
 body {
   font-family: 'Open Sans', sans-serif;
+  color: rgb(106, 106, 106);
+}
+
+a {
+  color: #23abf1;
 }
 
 h1 {
   font-size: 42px;
+}
+
+h2 {
+
+}
+
+h3 {
+  font-size: 125%;
+  margin: 10px 0;
 }
 
 h1,
