--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -4,21 +4,25 @@
 
     <div class="row">
       <div class="site-title">
-        Logo
-        title
-        link
+        <a href="/" class="logo"></a>
+        <div class="aside">
+          <a href="/" class="name">Atticus White</a>
+          <a href="#" class="handle">@atticoos</a>
+        </div>
       </div>
-      <nav class="site-nav">
-        <a href="#">Home</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Labs</a>
-        <a href="#">Blog</a>
-      </nav>
+      <div class="site-nav">
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Labs</a>
+          <a href="#">Blog</a>
+        </nav>
+      </div>
       <div class="off-links">
-        Linkedin
-        Twitter
-        Github
-        Email
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
   </div>
