--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -5,6 +5,7 @@ body {
 
 a {
   color: #23abf1;
+  text-decoration: none;
 }
 
 h1 {
@@ -35,22 +36,61 @@ p {
 
 .site-header {
   position: fixed;
-  background-color: #fff;
+  background-color: rgba(0,0,0,0.85);
+  color: #fff;
   top: 0;
   left: 0;
   width: 100%;
-  height: 80px;
+  padding: 15px 0;
   z-index: 100;
+
+  a {
+    color: #fff;
+  }
 
 
   .site-title {
     .make-xs-column(3);
+
+    .logo {
+      display: block;
+      float:left;
+      width: 40px;
+      height: 40px;
+      background-image:url(/dist/images/me.jpeg);
+      background-color: no-repeat;
+      background-size: cover;
+      border-radius: 1px;
+      overflow: hidden;
+      margin-right: 10px;
+    }
+    .aside {
+      float: left;
+      .name {
+        display: block;
+        font-size: 18px;
+        line-height: 18px;
+      }
+      .handle {
+        display: block;
+        font-weight: 100;
+      }
+    }
   }
   .site-nav {
     .make-xs-column(6);
+    text-align: center;
+    font-size: 26px;
+    font-weight: 300;
+    a {
+      display: inline-block;
+      margin: auto 10px;
+    }
   }
   .off-links {
     .make-xs-column(3);
+    font-size: 26px;
+    text-align: right;
   }
 }
 
