--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -36,7 +36,7 @@ p {
 
 .site-header {
   position: fixed;
-  background-color: rgba(0,0,0,0.85);
+  // background-color: rgba(0,0,0,0.85);
   color: #fff;
   top: 0;
   left: 0;
