--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,3 +6,6 @@
   </div>
 
 </footer>
+
+<script type="text/javascript" src="/dist/vendor.js"></script>
+<script type="text/javascript" src="/dist/site.js"></script>
