--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -5,7 +5,22 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:site_name" content="Atticus White" />
+  <meta property="article:author" content="https://www.facebook.com/attticus" />
+  <meta property="article:published_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}" />
+  <meta property="article:modified_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}" />
+  <meta property="og:image" content="{{'/dist/images/me.jpeg' | prepend: site.baseurl | prepend: site.url}}" />
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@atticoos"/>
+  <meta name="twitter:domain" content="Atticus White"/>
+  <meta name="twitter:creator" content="@atticoos"/>
 
+  <link rel="icon" href="/favicon.png" type="image/x-icon"/>
   <link rel="stylesheet" href="{{ "/dist/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
