--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -18,6 +18,7 @@
 @import '../../../bower_components/font-awesome/less/stacked.less';
 @import '../../../bower_components/font-awesome/less/icons.less';
 @import './variables';
+@import './animations';
 @import './site';
 @import './home';
 
