header right link styles

--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -91,6 +91,10 @@ p {
     .make-xs-column(3);
     font-size: 26px;
     text-align: right;
+    a {
+      display: inline-block;
+      margin-left: 5px;
+    }
   }
 }
 
