move dots into title sections

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -26,6 +26,20 @@
     &.background {
       background-image: url(/dist/images/hero.jpg);
       height: 300px;
+      padding: 120px 0;
+
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      h1 {
+        color: #fff;
+        margin: auto;
+        text-align: center;
+        position: relative;
+      }
 
       &:before {
         position: absolute;
