--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -1,1 +1,13 @@
-<h1>OPEN SOURCE</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>gulp-ng-config</h2>
+      <p>
+        This project is for AngulrJS
+      </p>
+    </div>
+    <div class="col-sm-6">
+      <h2>Project 2</h2>
+    </div>
+  </div>
+</div>
