--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -25,8 +25,8 @@
 
     &.background {
       background-image: url(/dist/images/hero.jpg);
-      height: 300px;
-      padding: 120px 0;
+      height: 400px;
+      padding-top: 160px;
 
       canvas {
         position: absolute;
@@ -39,6 +39,7 @@
         margin: auto;
         text-align: center;
         position: relative;
+        font-size: 64px;
       }
 
       &:before {
