--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -1,13 +1,36 @@
 <div class="container">
+  <br/><br/><br/>
   <div class="row">
-    <div class="col-sm-6">
-      <h2>gulp-ng-config</h2>
-      <p>
-        This project is for AngulrJS
-      </p>
+    <div class="col-sm-6" style="text-align: center;">
+      <img src="http://www.proxygear.com/images/posts/angularjs-logo.png" style="max-width: 50%; display: inline-block;"/>
     </div>
-    <div class="col-sm-6">
-      <h2>Project 2</h2>
+    <div class="col-sm-6" style="text-align: center;">
+      <img src="http://i.ytimg.com/vi/wDgjdXtrnzM/maxresdefault.jpg" style="max-width: 50%; margin-top: 70px; display: inline-block;" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6" style="text-align: center">
+      <h2>gulp-ng-config</h2>
+    </div>
+    <div class="col-sm-6" style="text-align: center">
+      <h2>arduino node sreams</h2>
+    </div>
+  </div>
+  <br/><Br/><br/>
+  <div class="row">
+    <div class="col-sm-6" style="text-align: center;">
+      <img src="http://s3.amazonaws.com/www.appcelerator.com.images/appc-logos-legal/display/appc-logo-stacked-light.png" style="max-width: 80%; display: inline-block;"/>
+    </div>
+    <div class="col-sm-6" style="text-align: center;">
+      <img src="https://www.pixeldynamo.com/wp-content/uploads/2014/01/chromecast_tips_header.png" style="max-width: 50%; margin-top: 70px; display: inline-block;" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6" style="text-align: center">
+      <h2>ti.OkHTTP</h2>
+    </div>
+    <div class="col-sm-6" style="text-align: center">
+      <h2>ti.Chromecast</h2>
     </div>
   </div>
 </div>
