--- a/src/_includes/home/labs.html
+++ b/src/_includes/home/labs.html
@@ -1,1 +1,19 @@
-das labs
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>Lab name here</h2>
+    </div>
+    <div class="col-sm-6">
+      <h2>Lab name here</h2>
+    </div>
+  </div>
+  <br/><br/><br/><br/><br/><br/>
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>Lab name here</h2>
+    </div>
+    <div class="col-sm-6">
+      <h2>Lab name here</h2>
+    </div>
+  </div>
+</div>
