--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -27,6 +27,7 @@
       background-image: url(/dist/images/hero.jpg);
       height: 400px;
       padding-top: 160px;
+      text-align: center;
 
       canvas {
         position: absolute;
@@ -40,6 +41,7 @@
         text-align: center;
         position: relative;
         font-size: 64px;
+        display: inline;
       }
 
       &:before {
