header nav active state

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -245,6 +245,9 @@
   .row {
     margin-top: 20px;
     margin-bottom: 20px;
+    &.hidden {
+      display: none;
+    }
     .chart {
       .make-md-column(3);
 
