--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -13,7 +13,7 @@
       <div class="site-nav">
         <nav>
           <a href="#">Home</a>
-          <a href="#">Portfolio</a>
+          <a href="#" class="active">Portfolio</a>
           <a href="#">Labs</a>
           <a href="#">Blog</a>
         </nav>
