--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -361,14 +361,14 @@
     }
 
     .skills.animate {
-      transition: left 300ms ease-out;
-      // transform: translate(0, 0);
+      transition: all 300ms ease-out;
+      transform: rotate(-360deg);
       left: 0;
     }
     .work.animate {
-      transition: left 300ms ease-out;
+      transition: all 300ms ease-out;
+      transform: rotate(360deg);
       left: 66.66666%;
-      // transform: translate(0, 0);
     }
   }
 
