--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -19,8 +19,11 @@
       display: none;
     }
 
-    &.collapsed .more {
-      display: block;
+    &.collapsed {
+      padding-bottom: 40px;
+      .more {
+        display: block;
+      }
     }
 
     &.background {
