--- a/src/_includes/home/skills.html
+++ b/src/_includes/home/skills.html
@@ -113,7 +113,7 @@
 
 <div class="row hidden">
   <div class="chart hidden-sm hidden-xs">
-    <h3>Package Management</h3>
+    <h3>Node</h3>
     <canvas id="chart-4" with="200" height="200"></canvas>
   </div>
 
