--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
 
   {% include head.html %}
-
-  <body>
+  {% assign current = page.url | downcase | replace: '.html','' | split: '/' %}
+  <body class="{{ current[1] }}">
 
     {% include header.html %}
 
