blog post styles

--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -22,6 +22,8 @@
 @import './site';
 @import './home';
 @import './home/portfolio';
+@import './blog';
+@import './highlight';
 
 * {
   box-sizing: border-box;
