--- a/src/_assets/less/highlight.less
+++ b/src/_assets/less/highlight.less
@@ -1,84 +1,10 @@
-/* Solarized Light
-For use with Jekyll and Pygments
-http://ethanschoonover.com/solarized
-SOLARIZED HEX      ROLE
---------- -------- ------------------------------------------
-base01    #586e75  body text / default code / primary content
-base1     #93a1a1  comments / secondary content
-base3     #fdf6e3  background
-orange    #cb4b16  constants
-red       #dc322f  regex, special keywords
-blue      #268bd2  reserved keywords
-cyan      #2aa198  strings, numbers
-green     #859900  operators, other keywords
-*/
-
-.highlight { background-color: #fdf6e3; color: #586e75 }
-.highlight .c { color: #93a1a1 } /* Comment */
-.highlight .err { color: #586e75 } /* Error */
-.highlight .g { color: #586e75 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
-.highlight .l { color: #586e75 } /* Literal */
-.highlight .n { color: #586e75 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
-.highlight .x { color: #cb4b16 } /* Other */
-.highlight .p { color: #586e75 } /* Punctuation */
-.highlight .cm { color: #93a1a1 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #93a1a1 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
-.highlight .gd { color: #2aa198 } /* Generic.Deleted */
-.highlight .ge { color: #586e75; font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #dc322f } /* Generic.Error */
-.highlight .gh { color: #cb4b16 } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
-.highlight .go { color: #586e75 } /* Generic.Output */
-.highlight .gp { color: #586e75 } /* Generic.Prompt */
-.highlight .gs { color: #586e75; font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #cb4b16 } /* Generic.Subheading */
-.highlight .gt { color: #586e75 } /* Generic.Traceback */
-.highlight .kc { color: #cb4b16 } /* Keyword.Constant */
-.highlight .kd { color: #268bd2 } /* Keyword.Declaration */
-.highlight .kn { color: #859900 } /* Keyword.Namespace */
-.highlight .kp { color: #859900 } /* Keyword.Pseudo */
-.highlight .kr { color: #268bd2 } /* Keyword.Reserved */
-.highlight .kt { color: #dc322f } /* Keyword.Type */
-.highlight .ld { color: #586e75 } /* Literal.Date */
-.highlight .m { color: #2aa198 } /* Literal.Number */
-.highlight .s { color: #2aa198 } /* Literal.String */
-.highlight .na { color: #586e75 } /* Name.Attribute */
-.highlight .nb { color: #B58900 } /* Name.Builtin */
-.highlight .nc { color: #268bd2 } /* Name.Class */
-.highlight .no { color: #cb4b16 } /* Name.Constant */
-.highlight .nd { color: #268bd2 } /* Name.Decorator */
-.highlight .ni { color: #cb4b16 } /* Name.Entity */
-.highlight .ne { color: #cb4b16 } /* Name.Exception */
-.highlight .nf { color: #268bd2 } /* Name.Function */
-.highlight .nl { color: #586e75 } /* Name.Label */
-.highlight .nn { color: #586e75 } /* Name.Namespace */
-.highlight .nx { color: #586e75 } /* Name.Other */
-.highlight .py { color: #586e75 } /* Name.Property */
-.highlight .nt { color: #268bd2 } /* Name.Tag */
-.highlight .nv { color: #268bd2 } /* Name.Variable */
-.highlight .ow { color: #859900 } /* Operator.Word */
-.highlight .w { color: #586e75 } /* Text.Whitespace */
-.highlight .mf { color: #2aa198 } /* Literal.Number.Float */
-.highlight .mh { color: #2aa198 } /* Literal.Number.Hex */
-.highlight .mi { color: #2aa198 } /* Literal.Number.Integer */
-.highlight .mo { color: #2aa198 } /* Literal.Number.Oct */
-.highlight .sb { color: #93a1a1 } /* Literal.String.Backtick */
-.highlight .sc { color: #2aa198 } /* Literal.String.Char */
-.highlight .sd { color: #586e75 } /* Literal.String.Doc */
-.highlight .s2 { color: #2aa198 } /* Literal.String.Double */
-.highlight .se { color: #cb4b16 } /* Literal.String.Escape */
-.highlight .sh { color: #586e75 } /* Literal.String.Heredoc */
-.highlight .si { color: #2aa198 } /* Literal.String.Interpol */
-.highlight .sx { color: #2aa198 } /* Literal.String.Other */
-.highlight .sr { color: #dc322f } /* Literal.String.Regex */
-.highlight .s1 { color: #2aa198 } /* Literal.String.Single */
-.highlight .ss { color: #2aa198 } /* Literal.String.Symbol */
-.highlight .bp { color: #268bd2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #268bd2 } /* Name.Variable.Class */
-.highlight .vg { color: #268bd2 } /* Name.Variable.Global */
-.highlight .vi { color: #268bd2 } /* Name.Variable.Instance */
-.highlight .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+/*** Pygments ***/
+.highlight{
+	background-color: #eee8d5;
+	color: #657b83;
+	border: 1px solid #d6ceb6;
+  border-radius: 3px 3px 3px 3px;
+  overflow: auto;
+  padding: 6px 10px;
+}
+.highlight .c { color: #586E75 } .highlight .err { color: #93A1A1 } .highlight .g { color: #93A1A1 } .highlight .k { color: #859900 } .highlight .l { color: #93A1A1 } .highlight .n { color: #93A1A1 } .highlight .o { color: #859900 } .highlight .x { color: #CB4B16 } .highlight .p { color: #93A1A1 } .highlight .cm { color: #586E75 } .highlight .cp { color: #859900 } .highlight .c1 { color: #586E75 } .highlight .cs { color: #859900 } .highlight .gd { color: #2AA198 } .highlight .ge { color: #93A1A1; font-style: italic } .highlight .gr { color: #DC322F } .highlight .gh { color: #CB4B16 } .highlight .gi { color: #859900 } .highlight .go { color: #93A1A1 } .highlight .gp { color: #93A1A1 } .highlight .gs { color: #93A1A1; font-weight: bold } .highlight .gu { color: #CB4B16 } .highlight .gt { color: #93A1A1 } .highlight .kc { color: #CB4B16 } .highlight .kd { color: #268BD2 } .highlight .kn { color: #859900 } .highlight .kp { color: #859900 } .highlight .kr { color: #268BD2 } .highlight .kt { color: #DC322F } .highlight .ld { color: #93A1A1 } .highlight .m { color: #2AA198 } .highlight .s { color: #2AA198 } .highlight .na { color: #93A1A1 } .highlight .nb { color: #B58900 } .highlight .nc { color: #268BD2 } .highlight .no { color: #CB4B16 } .highlight .nd { color: #268BD2 } .highlight .ni { color: #CB4B16 } .highlight .ne { color: #CB4B16 } .highlight .nf { color: #268BD2 } .highlight .nl { color: #93A1A1 } .highlight .nn { color: #93A1A1 } .highlight .nx { color: #93A1A1 } .highlight .py { color: #93A1A1 } .highlight .nt { color: #268BD2 } .highlight .nv { color: #268BD2 } .highlight .ow { color: #859900 } .highlight .w { color: #93A1A1 } .highlight .mf { color: #2AA198 } .highlight .mh { color: #2AA198 } .highlight .mi { color: #2AA198 } .highlight .mo { color: #2AA198 } .highlight .sb { color: #586E75 } .highlight .sc { color: #2AA198 } .highlight .sd { color: #93A1A1 } .highlight .s2 { color: #2AA198 } .highlight .se { color: #CB4B16 } .highlight .sh { color: #93A1A1 } .highlight .si { color: #2AA198 } .highlight .sx { color: #2AA198 } .highlight .sr { color: #DC322F } .highlight .s1 { color: #2AA198 } .highlight .ss { color: #2AA198 } .highlight .bp { color: #268BD2 } .highlight .vc { color: #268BD2 } .highlight .vg { color: #268BD2 } .highlight .vi { color: #268BD2 } .highlight .il { color: #2AA198 }
