--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -1,7 +1,14 @@
 .page-blog .post {
 
   .post-header {
-    .container;
+    padding: 90px 0 40px;
+
+    .post-meta {
+      font-weight: 100;
+      i {
+        margin-right: 5px;
+      }
+    }
   }
 
 
