--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -1,12 +1,21 @@
 ---
 layout: default
 ---
-<div class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+{% assign postTag = page.tags[0] %}
+{% assign postTag = site.data.tags[postTag] %}
 
+<div class="post">
+  <header class="post-header" style="background-color: {{postTag.color.background}}; color: {{postTag.color.font}}">
+    <div class="container">
+      <h1 class="post-title">{{ page.title }}</h1>
+      <div class="post-meta">
+        {% include posts/date.html %}
+        {% if page.tags.size > 0 %}
+          {% include posts/tags.html %}
+        {% endif %}
+      </div>
+    </div>
+  </header>
   <article class="post-content">
     {{ content }}
   </article>
