some assets and shit

--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -1,7 +1,12 @@
 .page-blog .post {
 
   .post-header {
-    padding: 90px 0 40px;
+    padding: 100px 0 50px;
+
+    .tag-icon {
+      display: block;
+      margin: 40px auto;
+    }
 
     .post-meta {
       font-weight: 100;
@@ -13,6 +18,7 @@
 
 
   .post-content {
+    padding: 40px 0;
     > *:not(.highlight) {
       .container;
     }
