--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -1,13 +1,23 @@
 ---
 layout: default
 ---
+{% if page.tags.size > 0 %}
 {% assign postTag = page.tags[0] %}
 {% assign postTag = site.data.tags[postTag] %}
+{% else %}
+{% assign postTag = site.data.tags.deafult %}
+{% endif %}
+
 
 <div class="post">
   <header class="post-header" style="background-color: {{postTag.color.background}}; color: {{postTag.color.font}}">
     <div class="container">
       <h1 class="post-title">{{ page.title }}</h1>
+
+      {% if postTag.icon %}
+      <img src="/dist/images/{{ postTag.icon }}" class="tag-icon" />
+      {% endif %}
+
       <div class="post-meta">
         {% include posts/date.html %}
         {% if page.tags.size > 0 %}
