--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -1,7 +1,12 @@
 .page-blog .post {
 
   .post-header {
-    padding: 100px 0 50px;
+    padding: 100px 0 40px;
+
+    .post-title {
+      font-size: 200%;
+      text-align: center;
+    }
 
     .tag-icon {
       display: block;
@@ -10,6 +15,7 @@
 
     .post-meta {
       font-weight: 100;
+      line-height: 30px;
       i {
         margin-right: 5px;
       }
