--- a/src/_includes/posts/date.html
+++ b/src/_includes/posts/date.html
@@ -1,4 +1,4 @@
 <div class="post-date">
   <i class="fa fa-clock-o"></i>
-  {{ page.date | date: '%b %-d, %Y'}}
+  {{ post.date | date: '%b %-d, %Y'}}
 </div>
