--- a/src/_includes/posts/tags.html
+++ b/src/_includes/posts/tags.html
@@ -1,6 +1,6 @@
 <div class="tags">
   <i class="fa fa-tag"></i>
-  {% for tag in page.tags %}
+  {% for tag in post.tags %}
     {% if site.data.tags[tag] %}
       {{ site.data.tags[tag].label }}
     {% endif %}
