--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -1,4 +1,4 @@
-.page-blog {
+.blog {
   .post-meta {
     i {
       margin-right: 5px;
@@ -6,7 +6,7 @@
   }
 }
 
-.page-blog .post {
+.blog.post {
 
   .post-header {
     padding: 100px 0 40px;
@@ -48,10 +48,14 @@
 }
 
 
-.page-blog .archive {
+.blog.archive {
   padding-top: 120px;
   .tag-list {
     .make-md-column(3);
+
+    ul {
+      list-style: none;
+    }
   }
 
   .post-list {
