--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -9,8 +9,7 @@ layout: default
 {% assign postTag = site.data.tags.deafult %}
 {% endif %}
 
-
-<div class="post">
+<div class="blog post">
   <header class="post-header" style="background-color: {{postTag.color.background}}; color: {{postTag.color.font}}">
     <div class="container">
       <h1 class="post-title">{{ post.title }}</h1>
