--- a/src/_layouts/tag_index.html
+++ b/src/_layouts/tag_index.html
@@ -28,7 +28,7 @@ layout: archive
             {% endif %}
           </div>
           <div class="excerpt">
-            {{ post.excerpt }}
+            <p>{{ post.excerpt }}</p>
           </div>
         </section>
       </article>
