--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -5,9 +5,7 @@
     }
     a {
       color: inherit;
-      &:hover {
-        text-decoration: underline;;
-      }
+      text-decoration: underline;
     }
   }
 }
@@ -90,10 +88,17 @@
         background-color: #fff;
         border: 1px solid #eee;
         position: relative;
+      }
+      h2 {
+        margin: 10px 0;
+      }
+      .post-meta {
+        font-size: 14px;
+        line-height: 22px;
+      }
+      .excerpt p {
         font-size: 16px;
-        p {
-          font-size: 18px;
-        }
+        line-height: 24px;
       }
     }
   }
