--- a/src/_layouts/tag_index.html
+++ b/src/_layouts/tag_index.html
@@ -21,12 +21,7 @@ layout: archive
           <h2>
             <a title="{{post.title}}" href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a>
           </h2>
-          <div class="post-meta">
-            {% include posts/date.html %}
-            {% if post.tags.size > 0 %}
-              {% include posts/tags.html %}
-            {% endif %}
-          </div>
+          {% include posts/meta.html %}
           <div class="excerpt">
             <p>{{ post.excerpt }}</p>
           </div>
