styles and transitions

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -48,6 +48,7 @@ body.page-index {
         position: relative;
         font-size: 64px;
         display: inline;
+        user-select: none;
       }
 
       &:before {
