--- a/src/_assets/less/home/portfolio.less
+++ b/src/_assets/less/home/portfolio.less
@@ -2,6 +2,7 @@
   .item {
     position: relative;
     cursor: pointer;
+    overflow: hidden;
     .overlay {
       position: absolute;
       top: 0;
@@ -9,19 +10,27 @@
       width: 100%;
       height: 100%;
       background-color: rgba(0,0,0,0.75);
-      display: none;
+      opacity: 0;
       color: #fff;
       padding: 10px;
       text-align: center;
+      transition: all 250ms ease-in;
     }
 
     h3 {
       font-size: 24px;
     }
 
+    .image {
+      transition: transform 250ms ease-in;
+    }
+
     &:hover {
+      .image {
+        transform: scale(1.1);
+      }
       .overlay {
-        display: block;
+        opacity: 1;
       }
     }
   }
