react native post

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -7,6 +7,11 @@ body.page-index {
     background-repeat: no-repeat;
     background-size: cover;
 
+    p {
+      font-size: 20px;
+      line-height: 32px;
+    }
+
     .title {
       color: #666;
       text-align: center;
