--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -34,6 +34,7 @@
 
   .post-content {
     padding: 40px 0;
+    line-height: 26px;
     > *:not(.highlight) {
       .container;
     }
@@ -45,6 +46,12 @@
       max-width: 80%;
       display: block;
       margin: 20px auto;
+    }
+
+    ul, ol {
+      li {
+        margin-left: 20px;
+      }
     }
 
     .highlight {
