--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -24,5 +24,7 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
-
+  <div class="container">
+    {% include posts/comments.html %}
+  </div>
 </div>
