social icon colors

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -20,10 +20,16 @@
         </nav>
       </div>
       <div class="off-links">
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
-        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/atticuswhite"
+          title="Connect with Atticus White on LinkedIn"
+          target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a href="https://twitter.com/atticoos"
+          title="Follow Atticus on Twitter"
+          target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/ajwhite"
+          title="Browse open source projects by Atticus White on Github"
+          target="_blank"><i class="fa fa-github"></i></a>
+        <a href="#" title="Get in contact with Atticus"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
   </div>
