--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -94,7 +94,7 @@ h5 {
         bottom: 0;
         left: 0;
         width: 100%;
-        background-color: #3299BB;
+        background-color: #31a2d4;
         display: none;
       }
 
@@ -113,6 +113,25 @@ h5 {
     a {
       display: inline-block;
       margin-left: 5px;
+
+      .fa {
+        transition: color 250ms ease-in;
+      }
+
+      &:hover {
+        .fa-linkedin {
+          color: #007bb6;
+        }
+        .fa-twitter {
+          color: #4099FF;
+        }
+        .fa-github {
+          // color: #000;
+        }
+        .fa-envelope {
+          color: #31a2d4;
+        }
+      }
     }
   }
 }
