--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -8,7 +8,9 @@
         <a href="/" class="logo"></a>
         <div class="aside">
           <a href="/" class="name">Atticus White</a>
-          <a href="#" class="handle">@atticoos</a>
+          <a href="https://twitter.com/atticoos"
+            title="See what Atticus tweets"
+            class="handle">@atticoos</a>
         </div>
       </div>
       <div class="site-nav">
