--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -67,9 +67,12 @@
 
 .blog.archive {
   padding-top: 120px;
-  .tag-list {
+  .post-sidebar {
     .make-md-column(3);
     text-align: right;
+    section {
+      margin-bottom: 40px;
+    }
     ul {
       padding: 0;
       margin: 0;
