--- a/src/_layouts/archive.html
+++ b/src/_layouts/archive.html
@@ -5,15 +5,26 @@ layout: default
   <div class="post-list">
     {{ content }}
   </div>
-  <aside class="tag-list">
-    <ul>
-      {% for tag in site.tags %}
-        {% assign postTag = tag[0] %}
-        {% assign postTag = site.data.tags[postTag] %}
-      <li>
-        <a href="/tag/{{tag[0]}}">{{ postTag.label }}</a>
-      </li>
-      {% endfor %}
-    </ul>
+  <aside class="post-sidebar">
+    <section>
+      <h3>Tags</h3>
+      <ul class="tag-list">
+        {% for tag in site.tags %}
+          {% assign postTag = tag[0] %}
+          {% assign postTag = site.data.tags[postTag] %}
+        <li>
+          <a href="/tag/{{tag[0]}}">{{ postTag.label }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </section>
+    <section>
+      <h3>My favorite blogs</h3>
+      <ul>
+        {% for blog in site.data.blogs %}
+          <li><a href="{{ blog.url }}" title="{{ blog.name }} blog" target="_blank">{{ blog.name }}</a></li>
+        {% endfor %}
+      </ul>
+    </section>
   </aside>
 </div>
