--- a/src/_assets/less/variables.less
+++ b/src/_assets/less/variables.less
@@ -30,3 +30,9 @@
 @desktop: ~"(min-width: @{screen-md-min}) and (max-width: @{screen-md-max})";
 @tablet-max: ~"(max-width: @{screen-sm-max})";
 @no-mobile: ~"(min-width: @{screen-md-min})";
+
+
+@small: ~"(max-width: @{screen-sm-max})";
+@medium: ~"(max-width: @{screen-md-max})";
+@large: ~"(min-width: @{screen-md-max})";
+@mediumAndUp: ~"(min-width: @{screen-md-min})";
