--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,10 +1,7 @@
 <footer class="site-footer">
-
-  <div class="wrapper">
+  <div class="container">
     Footer
-
   </div>
-
 </footer>
 
 <script type="text/javascript" src="/dist/vendor.js"></script>
