--- a/src/_includes/posts/meta.html
+++ b/src/_includes/posts/meta.html
@@ -14,7 +14,7 @@
       <i class="fa fa-tag"></i>
       {% for tag in post.tags %}
         {% if site.data.tags[tag] %}
-          <a href="/tag/{{tag}}">{{ site.data.tags[tag].label }}</a>{% if forloop.index != lastIndex %}, {% endif %}
+          <a href="/tag/{{tag}}" title="Read more {{site.data.tags[tag].label}} posts">{{ site.data.tags[tag].label }}</a>{% if forloop.index != lastIndex %}, {% endif %}
         {% endif %}
       {% endfor %}
     </div>
@@ -23,7 +23,7 @@
   {% if post.project %}
   <div class="project">
     <i class="fa fa-github"></i>
-    <a href="{{ post.project }}">{{ post.project }}</a>
+    <a href="{{ post.project }}" title="View {{ post.title }} on Github" target="_blank">{{ post.project }}</a>
   </div>
   {% endif %}
 </div>
