--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,3 +6,7 @@
 
 <script type="text/javascript" src="/dist/vendor.js"></script>
 <script type="text/javascript" src="/dist/site.js"></script>
+<script async
+        defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6ZwkIYqNwq2SYGbqZ7_h1ws9FyCxpepE&callback=initMaps">
+</script>
