--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -343,6 +343,35 @@ body.page-index {
   }
 }
 
+.home section.map {
+  #contact-map {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+  }
+  &:before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 11;
+    background-color: rgba(0,0,0,0.25);
+  }
+  h1 {
+    position: relative;
+    z-index: 15;
+  }
+}
+
+.home section.contact {
+  
+}
+
 
 @media @no-mobile {
   .home section.me .container .circles.animated {
