integrate my fluid-labels

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -369,8 +369,17 @@ body.page-index {
 }
 
 .home section.contact {
-  
+  padding: 60px 0;
+  form {
+    display: block;
+    .make-md-column(6);
+
+    textarea {
+      height: 150px;
+    }
+  }
 }
+
 
 
 @media @no-mobile {
