--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -17,6 +17,7 @@
 @import '../../../bower_components/font-awesome/less/rotated-flipped.less';
 @import '../../../bower_components/font-awesome/less/stacked.less';
 @import '../../../bower_components/font-awesome/less/icons.less';
+@import '../../../bower_components/fluid-labels/src/fluid-labels.less';
 @import './variables';
 @import './animations';
 @import './site';
