social side of contact

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -377,6 +377,41 @@ body.page-index {
     textarea {
       height: 150px;
     }
+
+    input[type=submit] {
+      width: 100%;
+    }
+  }
+  .other {
+    .make-md-column(6);
+
+    .links {
+      margin-top: 26px;
+
+      .social {
+        font-size: 30px;
+        margin-bottom: 26px;
+        .clearfix;
+        i {
+          font-size: 46px;
+          width: 60px;
+          float: left;
+          &.fa-linkedin {
+            color: #007bb6;
+          }
+          &.fa-twitter {
+            color: #4099FF;
+          }
+          &.fa-github {
+            color: #000;
+          }
+        }
+        a {
+          float: left;
+          color: #6a6a6a;
+        }
+      }
+    }
   }
 }
 
