--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -170,3 +170,13 @@ form {
     width: 100%;
   }
 }
+
+.button,
+input[type=submit],
+button,
+input[type=button] {
+  background-color: @blue;
+  border: none;
+  color: #fff;
+  padding: 15px;
+}
