reorder and footer links

--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -140,6 +140,22 @@ h5 {
   background-color: @black;
   color: #fff;
   padding: 60px 0;
+  font-weight: 100;
+  .links {
+    .make-md-column(4);
+    ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      li {
+        margin-bottom: 5px;
+      }
+    }
+    a {
+      color: #fff;
+    }
+
+  }
 }
 
 
