--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,6 +1,16 @@
 <footer class="site-footer">
   <div class="container">
-    Footer
+    <div class="row">
+      <div class="links">
+        <h3>Atticus White</h3>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/">Portfolio</a></li>
+          <li><a href="/">Labs</a></li>
+          <li><a href="/">Blog</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </footer>
 
