--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -443,6 +443,11 @@ body.page-index {
       .me {
         z-index: auto;
       }
+      .skills,
+      .me,
+      .work {
+        display: block;
+      }
     }
 
     .skills.animate {
