--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -195,4 +195,8 @@ input[type=button] {
   border: none;
   color: #fff;
   padding: 15px;
+  transition: background-color 200ms ease-in;
+  &:hover {
+    background-color: darken(@blue, 7%);
+  }
 }
