--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,14 +1,21 @@
 <footer class="site-footer">
   <div class="container">
     <div class="row">
-      <div class="links">
-        <h3>Atticus White</h3>
+      <div class="about">
+        <h3>About Atticus White</h3>
+        <p>
+          I build the web and tablet applications for Robin Powered, Inc. -- The digital interface to your office. I spend my days in Angular and my nights in NodeJS. Javascript all-the-things. TC-39 fan. ES6 crazy.
+        </p>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Labs</a></li>
-          <li><a href="/">Blog</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="https://github.com/ajwhite">Github</a></li>
+          <li><a href="https://twitter.com/atticoos">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/atticuswhite">LinkedIn</a></li>
         </ul>
+      </div>
+      <div class="face">
+        <img src="/dist/images/me2.jpeg" />
       </div>
     </div>
   </div>
